test/files/neg/procedure-removal.check
procedure-removal.scala:4: warning: procedure syntax is deprecated: instead, add `: Unit =` to explicitly declare `bar`'s return type [quick fix available]
  def bar {}
          ^
procedure-removal.scala:5: warning: procedure syntax is deprecated: instead, add `: Unit` to explicitly declare `baz`'s return type [quick fix available]
  def baz
         ^
procedure-removal.scala:6: warning: procedure syntax is deprecated: instead, add `: Unit` to explicitly declare `boo`'s return type [quick fix available]
  def boo(i: Int, l: Long)
                          ^
procedure-removal.scala:7: warning: procedure syntax is deprecated: instead, add `: Unit =` to explicitly declare `boz`'s return type [quick fix available]
  def boz(i: Int, l: Long) {}
                           ^
procedure-removal.scala:8: warning: procedure syntax is deprecated for constructors: add `=`, as in method definition [quick fix available]
  def this(i: Int) { this() } // Don't complain here! Just slap them with an error.
                  ^
procedure-removal.scala:4: warning: side-effecting nullary methods are discouraged: suggest defining as `def bar()` instead [quick fix available]
  def bar {}
      ^
procedure-removal.scala:5: warning: side-effecting nullary methods are discouraged: suggest defining as `def baz()` instead [quick fix available]
  def baz
      ^
procedure-removal.scala:9: warning: side-effecting nullary methods are discouraged: suggest defining as `def foz()` instead [quick fix available]
  def foz: Unit               // Don't complain here!
      ^
error: No warnings can be incurred under -Werror.
8 warnings
1 error
